--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -3,7 +3,7 @@ name: Update Translation Table
 on:
   push:
     paths:
-      - 'HackingSkill/42/media/lua/shared/Translate/**'
+      - 'HackingSkill/42.13/media/lua/shared/Translate/**'
       - 'scripts/update-readme.lua'
   workflow_dispatch:
 
